--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 09:05:02 2018</p>
+         Last Run: Thu Nov 15 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Clear</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>4</td>
-                        <td>91</td>
+                        <td>5</td>
+                        <td>92</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -46,10 +46,10 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>3</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -70,11 +70,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "3",
                  "2",
                  "1"
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "91",
-                 "81",
-                 "68",
-                 "58"
+                 "92",
+                 "82",
+                 "67",
+                 "57"
                ]
              },
              {
@@ -203,7 +203,7 @@
                  "2",
                  "3",
                  "3",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 09:05:02 2018</p>
+         Last Run: Thu Nov 15 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -266,13 +266,13 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>1</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -280,23 +280,23 @@
                         <td>5</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>84</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>7</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>1</td>
                         <td>44</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>79</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,9 +323,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
+                 "-1",
                  "2",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -406,7 +406,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "48",
+                 "47",
                  "44"
                ]
              },
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "84",
-                 "79"
+                 "90",
+                 "87",
+                 "83"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 09:05:02 2018</p>
+         Last Run: Thu Nov 15 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,15 +479,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-4</td>
+                        <td>-5</td>
                         <td>1</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,11 +495,11 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>72</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>21</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-5",
                  "-6"
                ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "71",
-                 "72"
+                 "68",
+                 "69",
+                 "70"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "24",
-                 "21"
+                 "30",
+                 "25",
+                 "22"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 09:05:02 2018</p>
+         Last Run: Thu Nov 15 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -712,7 +712,7 @@
                         <td>3</td>
                         <td>67</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>WSW</td>
                         <td>72</td>
                      </tr>
