--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 10:05:03 2018</p>
+         Last Run: Thu Nov 15 11:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Clear</td>
                         <td>-12</td>
                         <td>-17</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>92</td>
                         <td>0</td>
                         <td>8</td>
@@ -58,7 +58,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -74,7 +74,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "4",
                  "3",
                  "2",
                  "1"
@@ -190,7 +190,7 @@
                "data":[
                  "92",
                  "82",
-                 "67",
+                 "68",
                  "57"
                ]
              },
@@ -203,7 +203,7 @@
                  "2",
                  "3",
                  "3",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 10:05:03 2018</p>
+         Last Run: Thu Nov 15 11:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>90</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -282,21 +282,21 @@
                         <td>1</td>
                         <td>47</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>87</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>7</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>1</td>
                         <td>44</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>83</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -325,7 +325,7 @@
                "data":[
                  "-1",
                  "2",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "87",
-                 "83"
+                 "89",
+                 "84",
+                 "79"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 10:05:03 2018</p>
+         Last Run: Thu Nov 15 11:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,18 +479,6 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>1</td>
-                        <td>68</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>30</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-5</td>
@@ -499,7 +487,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>29</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-5</td>
+                        <td>1</td>
+                        <td>70</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
                  "69",
-                 "70"
+                 "70",
+                 "71"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "25",
-                 "22"
+                 "29",
+                 "24",
+                 "21"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 10:05:03 2018</p>
+         Last Run: Thu Nov 15 11:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "72",
-                 "72"
+                 "68",
+                 "71",
+                 "71"
                ]
              }
            ]
