--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 14:05:02 2018</p>
+         Last Run: Thu Nov 15 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -32,11 +32,11 @@
                         <td>08:00 AM</td>
                         <td>Clear</td>
                         <td>-12</td>
-                        <td>-17</td>
+                        <td>-16</td>
                         <td>4</td>
-                        <td>92</td>
+                        <td>86</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
                         <td>1</td>
                      </tr>
@@ -46,11 +46,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>83</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -58,11 +58,11 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>9</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -70,11 +70,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,7 +102,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
+                 "-16",
                  "-14",
                  "-11",
                  "-7"
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "92",
-                 "83",
-                 "70",
-                 "59"
+                 "86",
+                 "79",
+                 "68",
+                 "57"
                ]
              },
              {
@@ -201,9 +201,9 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
+                 "6",
                  "7",
-                 "9",
-                 "11"
+                 "9"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 14:05:02 2018</p>
+         Last Run: Thu Nov 15 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,9 +268,9 @@
                         <td>5</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>60</td>
                      </tr>
@@ -280,11 +280,11 @@
                         <td>7</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>61</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,9 +292,9 @@
                         <td>8</td>
                         <td>6</td>
                         <td>1</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>62</td>
                      </tr>
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "39",
-                 "38"
+                 "45",
+                 "41",
+                 "39"
                ]
              },
              {
@@ -417,7 +417,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "60",
-                 "61",
+                 "62",
                  "62"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 14:05:02 2018</p>
+         Last Run: Thu Nov 15 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -487,31 +487,31 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>0</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>1</td>
                         <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>23</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-6",
                  "-6"
                ]
              },
@@ -551,7 +551,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-1",
-                 "-1",
+                 "-2",
                  "-2"
                ]
              }
@@ -610,8 +610,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "0",
-                 "0"
+                 "1",
+                 "1"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "23",
-                 "19"
+                 "20",
+                 "19",
+                 "18"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 14:05:02 2018</p>
+         Last Run: Thu Nov 15 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>1</td>
+                        <td>62</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>88</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Overcast</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>63</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>69</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>65</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>73</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>Overcast</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>74</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,9 +753,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-2",
                  "-4",
-                 "-4",
-                 "-5"
+                 "-4"
                ]
              },
              {
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "1",
                  "0",
-                 "0",
-                 "-1"
+                 "0"
                ]
              }
            ]
@@ -824,8 +824,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "1"
                ]
              },
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "62",
                  "63",
-                 "65",
-                 "67"
+                 "64"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "73",
-                 "74"
+                 "88",
+                 "89",
+                 "89"
                ]
              }
            ]
